add routes to book pages

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -28,6 +28,7 @@
 @import url(../blocks/books/__card/books__card.css);
 @import url(../blocks/books/__loader-container/books__loader-container.css);
 @import url(../blocks/books/__loader/books__loader.css);
+@import url(../blocks/books/__link/books__link.css);
 
 /* BookCard */
 @import url(../blocks/card/card.css);
