--- a/src/blocks/book/__title/book__title.css
+++ b/src/blocks/book/__title/book__title.css
@@ -1,8 +1,15 @@
 .book__title {
+    max-width: 100%;
     margin: 0;
     margin-bottom: 10px;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
     line-height: 163%;
+}
+
+@media screen and (max-width: 628px) {
+    .book__title {
+        font-size: 20px;
+    }
 }
