--- a/src/blocks/books/__button-container/books__button-container.css
+++ b/src/blocks/books/__button-container/books__button-container.css
@@ -1,5 +1,6 @@
 .books__button-container {
     padding: 40px 0 0;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
