--- a/src/blocks/not-found/__button/not-found__button.css
+++ b/src/blocks/not-found/__button/not-found__button.css
@@ -1,4 +1,4 @@
-.books__load-button {
+.not-found__button {
     cursor: pointer;
     border: none;
     margin: 0;
@@ -14,6 +14,6 @@
     color: #000;
 }
 
-.books__load-button:hover {
+.not-found__button:hover {
     opacity: 0.5;
 }
