--- a/src/components/Searcher/Searcher.css
+++ b/src/components/Searcher/Searcher.css
@@ -2,3 +2,13 @@
 @import url(../../assets/styles/blocks/header/__search/header__search.css);
 @import url(../../assets/styles/blocks/header/__input/header__input.css);
 @import url(../../assets/styles/blocks/header/__search-button/header__search-button.css);
+@import url(../../assets/styles/blocks/header/__search-button/_disabled/header__search-button_disabled.css);
+
+.header__link {
+    text-decoration: none;
+    background-color: transparent;
+    color: transparent;
+    display: block;
+    width: 100px;
+    height: 100%;
+}
