--- a/src/components/BookCard/BookCard.css
+++ b/src/components/BookCard/BookCard.css
@@ -5,3 +5,4 @@
 @import url(../../assets/styles/blocks/card/__category/card__category.css);
 @import url(../../assets/styles/blocks/card/__authors/card__authors.css);
 @import url(../../assets/styles/blocks/card/__title/card__title.css);
+@import url(../../assets/styles/blocks/card/__cover-container/card__cover-container.css);
