--- a/src/assets/styles/blocks/card/__cover/card__cover.css
+++ b/src/assets/styles/blocks/card/__cover/card__cover.css
@@ -1,6 +1,6 @@
 .card__cover {
-    width: 160px;
-    margin-bottom: 20px;
+    max-width: 100%;
+    max-height: 240px;
     box-sizing: border-box;
     object-fit: cover;
     display: block;
